[build-system]
requires = ["setuptools >= 61.0.0", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "beat"
version = "1.2.4"
requires-python = ">=3.8"
license = {text = "GPLv3"}
description = "'Bayesian Earthquake Analysis Tool'"
readme = "README.md"
authors = [
  {name = "Hannes Vasyura-Bathke", email = "vasbath@gfz-potsdam.de"}
]
maintainers = [
  {name = "Hannes Vasyura-Bathke", email = "vasbath@gfz-potsdam.de"}
]
keywords = ["Bayesian Inference", "seismology", "geodesy", "earthquake", "volcano"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: C",
    "Operating System :: POSIX",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy==1.22.4",
    "scipy>=1.8.0",
    "pymc3==3.4.1",
    "tqdm>=4.64.0",
    "matplotlib>=3.1.1",
    "psutil>=5.9.0",
    "mpi4py>=3.1.3",
    "pyrocko>=2022.06.10"
]

[project.urls]
Home = "https://pyrocko.org/beat"
GitHub = "https://github.com/hvasbath/beat"
Issues = "https://github.com/hvasbath/beat/issues"

[project.optional-dependencies]
formatting = ["flake8", "black"]

[project.scripts]
beat = "beat.apps.beat:main"
beatdown = "beat.apps.beatdown:main"

[tool.setuptools.package-data]
beat = ["*.jpg", "*.png"]

[tool.setuptools]
packages=[
    "beat",
    "beat.fast_sweeping",
    "beat.voronoi",
    "beat.sampler",
    "beat.models",
    "beat.plotting",
    "beat.ffi",
    "beat.apps"
]
