#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([fomosto_psgrn], [2008a])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_F77
AC_CONFIG_FILES([
                 Makefile
                 src/psgrn/Makefile
                 src/pscmp/Makefile
                 ])
AC_OUTPUT
