bin_PROGRAMS = fomosto_psgrn2008a
fomosto_psgrn2008a_SOURCES = axb.f bessj0.f bessj1.f bessj.f caxcb.f cdc3d0.f cdsvd500.f cmemcpy.f four1.f getdata.f hsmatinv.f hsmatrix.f memcpy.f outint.f psgbsj.f psgglob.h psghksh.f psghskern.f psghssrce.f psgkern.f psglayer.f psgmain.f psgmatinv.f psgmatrix.f psgmoduli.f psgproppsv.f psgpropsh.f psgpsv.f psgsh.f psgsource.f psgspec.f psgsublay.f psgwvint.f
